--- a/JavaWorkspace/rssReaderConcept/pom.xml
+++ b/JavaWorkspace/rssReaderConcept/pom.xml
@@ -22,6 +22,11 @@
   		<artifactId>rome</artifactId>
   		<version>1.8.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.eclipse.jgit</groupId>
+  		<artifactId>org.eclipse.jgit</artifactId>
+  		<version>4.10.0.201712302008-r</version>
+  	</dependency>
   </dependencies>
 </project>
 
