--- a/JavaWorkspace/rssReaderConcept/pom.xml
+++ b/JavaWorkspace/rssReaderConcept/pom.xml
@@ -1,8 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>seniordesigntests</groupId>
-  <artifactId>seniordesigntests</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <artifactId>rssReader</artifactId>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -27,6 +25,14 @@
   		<artifactId>org.eclipse.jgit</artifactId>
   		<version>4.10.0.201712302008-r</version>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
+  <groupId>rssReader</groupId>
+  <version>0.1.0</version>
 </project>
 
