Use UTF-8 Encoding
This commit adds a property to the pom to maven knows the encoding is UTF-8

Issue: #13

--- a/JavaWorkspace/rssReaderConcept/pom.xml
+++ b/JavaWorkspace/rssReaderConcept/pom.xml
@@ -110,5 +110,8 @@
 	</dependencies>
 	<groupId>rssReader</groupId>
 	<version>0.1.0</version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
 
