Add Coverage Report to CI Output
This commit enables the coverage report to print out at the end of a
successful CI run. This will be used by gitlab to search for a coverage
total at the end of the run.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,6 @@ image: maven:3.5.2-jdk-8-alpine
 
 job1:
   script:
-    - (cd JavaWorkspace/diffMapper; mvn install -B)
+    - (cd JavaWorkspace/diffMapper; mvn install -B && cat target/site/jacoco/index.html)
     - (cd JavaWorkspace/diffLinker;mvn install -B)
 
