Enable Coverage on DiffLinker
This commit adds coverage to the DiffLinker Project and also splits
the initial job into multiple jobs, one for each project.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,10 @@
 image: maven:3.5.2-jdk-8-alpine
 
-job1:
+DiffMapper:
   script:
     - (cd JavaWorkspace/diffMapper; mvn install -B && cat target/site/jacoco/index.html)
-    - (cd JavaWorkspace/diffLinker;mvn install -B)
+
+DiffLinker:
+  script:
+    - (cd JavaWorkspace/diffLinker; mvn install -B && cat target/site/jacoco/index.html)
 
