Add Coverage to RssReader
This commit adds coverage to the RssReader Project and moves it to a
separate job.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,5 +10,5 @@ DiffLinker:
     
 RssReader:
   script:
-    - (cd JavaWorkspace/rssReaderConcept; mvn install -B)
+    - (cd JavaWorkspace/rssReaderConcept; mvn install -B && cat target/site/jacoco/index.html)
 
