updated dependancies, added writer class with hard coded values

--- a/JavaWorkspace/rssReaderConcept/pom.xml
+++ b/JavaWorkspace/rssReaderConcept/pom.xml
@@ -133,6 +133,11 @@
 			<version>0.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
+		</dependency>
 	</dependencies>
 	<groupId>rssReader</groupId>
 	<version>0.1.0</version>
