--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,3 +12,6 @@ RssReader:
   script:
     - (cd JavaWorkspace/rssReaderConcept; mvn install -B && cat target/site/jacoco/index.html)
 
+Patcher:
+  script:
+    - (cd JavaWorkspace/patchGeneration; mvn install -B && cat target/site/jacoco/index.html)
