Move Main method to separate class
This commit moves the Main method of the DiffMapper to a separate class
so the DiffMapper can be packaged without it. This will allow one
package of the DiffMapper to be included as a maven dependency and allow
another package to be executable.

--- a/JavaWorkspace/diffMapper/pom.xml
+++ b/JavaWorkspace/diffMapper/pom.xml
@@ -83,7 +83,7 @@
 						<manifest>
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>${project.build.finalName}.lib/</classpathPrefix>
-							<mainClass>edu.iastate.sdmay1809.DiffMapper</mainClass>
+							<mainClass>edu.iastate.sdmay1809.DiffMapperMain</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -102,7 +102,7 @@
 						<configuration>
 							<archive>
 								<manifest>
-									<mainClass>edu.iastate.sdmay1809.DiffMapper</mainClass>
+									<mainClass>edu.iastate.sdmay1809.DiffMapperMain</mainClass>
 								</manifest>
 							</archive>
 							<descriptorRefs>
