Added .ini support

--- a/JavaWorkspace/patchGeneration/pom.xml
+++ b/JavaWorkspace/patchGeneration/pom.xml
@@ -139,6 +139,12 @@
 			<version>0.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.ini4j/ini4j -->
+		<dependency>
+		    <groupId>org.ini4j</groupId>
+		    <artifactId>ini4j</artifactId>
+		    <version>0.5.1</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
