--- a/site/package.json
+++ b/site/package.json
@@ -27,12 +27,13 @@
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angularfire2": "^5.0.0-rc.4",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "firebase": "^4.6.2",
     "font-awesome": "^4.7.0",
     "ng2-validation": "^4.2.0",
+    "npm": "^5.8.0",
     "rxjs": "^5.5.2",
     "typescript": "~2.4.2",
     "typescript-collections": "^1.2.5",
@@ -45,6 +46,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "bootstrap": "^4.0.0",
     "codelyzer": "~3.2.0",
     "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.6.2",
