Patcher Tests and testing overhaul

--- a/JavaWorkspace/patchGeneration/resources/patcher.ini
+++ b/JavaWorkspace/patchGeneration/resources/patcher.ini
@@ -22,8 +22,8 @@ _raw_spin_unlock_irqrestore=false
 attribute=false
 
 [MutexPaths]
-include/linux/mutex.h=true
+include/linux/mutex.h
 
 [SpinPaths]
-include/linux/spinlock.h=true
-include/linux/spinlock_api_smp.h=true
+include/linux/spinlock.h
+include/linux/spinlock_api_smp.h
