--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ buildNumber.properties
 ### Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 
+include/linux/lsap_spinlock.h
+include/linux/lsap_mutex_lock.h
+
