Reworked Patcher and Macro classes

--- a/JavaWorkspace/patchGeneration/resources/patcher.ini
+++ b/JavaWorkspace/patchGeneration/resources/patcher.ini
@@ -2,10 +2,12 @@
 mutex=true
 lock=true
 mutex_lock_io_nested=false
+_is_=false
 
 [MutexMacroCriteria]
 mutex=true
 lock=true
+nested=false
 
 [SpinFunctionCriteria]
 
