Update Group ID
This commit updates the group id for all projects so they are the same.
This won't affect projects, but it makes sense for all of these projects
to share the same group id

Issue: #11

--- a/JavaWorkspace/rssReaderConcept/pom.xml
+++ b/JavaWorkspace/rssReaderConcept/pom.xml
@@ -139,7 +139,7 @@
 			<version>20180130</version>
 		</dependency>
 	</dependencies>
-	<groupId>rssReader</groupId>
+	<groupId>edu.iastate.sdmay1809</groupId>
 	<version>0.1.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
