Add Shared Project to CI
This commit adds a new job in CI for the shared utils project.

Issue: #11

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,9 @@
 image: dhanwada/lsap-pipeline:1.0.0
 
+Shared:
+  script:
+    - (cd JavaWorkspace/shared; mvn install -B && cat target/site/jacoco/index.html)
+
 DiffMapper:
   script:
     - (cd JavaWorkspace/diffMapper; mvn install -B && cat target/site/jacoco/index.html)
