--- a/JavaWorkspace/diffMapper/pom.xml
+++ b/JavaWorkspace/diffMapper/pom.xml
@@ -94,7 +94,7 @@
 								</manifest>
 							</archive>
 							<descriptorRefs>
-								<descriptorRef>executable</descriptorRef>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
 							</descriptorRefs>
 						</configuration>
 					</execution>
