--- a/JavaWorkspace/diffLinker/pom.xml
+++ b/JavaWorkspace/diffLinker/pom.xml
@@ -145,6 +145,11 @@
 			<version>0.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>edu.iastate.sdmay1809</groupId>
+			<artifactId>shared</artifactId>
+			<version>0.1.0</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
