Update CI to fix tests
This commit adds a fix for CI for DiffMapper and DiffLinker. The shared
library is installed first so it is added to the local repository. This
allows the DiffMapper and DiffLinker to correctly install the dependency.

Issue: #11

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,10 +6,12 @@ Shared:
 
 DiffMapper:
   script:
+    - (cd JavaWorkspace/shared; mvn install -B)
     - (cd JavaWorkspace/diffMapper; mvn install -B && cat target/site/jacoco/index.html)
 
 DiffLinker:
   script:
+    - (cd JavaWorkspace/shared; mvn install -B)
     - (cd JavaWorkspace/diffLinker; mvn install -B && cat target/site/jacoco/index.html)
     
 RssReader:
