--- a/JavaWorkspace/dataTranslator/pom.xml
+++ b/JavaWorkspace/dataTranslator/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>dataTranslator</groupId>
+  <groupId>edu.iastate.sdmay1809</groupId>
   <artifactId>dataTranslator</artifactId>
   <version>0.1.0</version>
 
@@ -29,6 +29,11 @@
     	<groupId>org.json</groupId>
     	<artifactId>json</artifactId>
 		<version>20180130</version>
+    </dependency>
+        <dependency>
+    	<groupId>edu.iastate.sdmay1809</groupId>
+    	<artifactId>shared</artifactId>
+		<version>0.1.0</version>
     </dependency>
   </dependencies>
 
