Skip Unit Tests for Shared on other Project Jobs
This commit adjusts the install command for jobs use the Shared Library
so they don't run tests. Test are only run for the Shared job, which
should speed up unit tests.

Issue: #56

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,12 +6,12 @@ Shared:
 
 DiffMapper:
   script:
-    - (cd JavaWorkspace/shared; mvn install -B)
+    - (cd JavaWorkspace/shared; mvn install -B -Dmaven.test.skip=true)
     - (cd JavaWorkspace/diffMapper; mvn install -B && cat target/site/jacoco/index.html)
 
 DiffLinker:
   script:
-    - (cd JavaWorkspace/shared; mvn install -B)
+    - (cd JavaWorkspace/shared; mvn install -B -Dmaven.test.skip=true)
     - (cd JavaWorkspace/diffLinker; mvn install -B && cat target/site/jacoco/index.html)
     
 RssReader:
