Added Parameter and Macro and their tests and Locker interface

--- a/JavaWorkspace/patchGeneration/pom.xml
+++ b/JavaWorkspace/patchGeneration/pom.xml
@@ -133,6 +133,12 @@
 			<version>1.17.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.javatuples/javatuples -->
+		<dependency>
+		    <groupId>org.javatuples</groupId>
+		    <artifactId>javatuples</artifactId>
+		    <version>1.2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.jacoco</groupId>
 			<artifactId>jacoco-maven-plugin</artifactId>
