--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,3 +22,8 @@ RssReader:
 Patcher:
   script:
     - (cd JavaWorkspace/patchGeneration; mvn install -B && cat target/site/jacoco/index.html)
+
+DataTranslator:
+  script:
+   - (cd JavaWorkspace/shared; mvn install -B -Dmaven.test.skip=true)
+   - (cd JavaWorkspace/dataTranslator; mvn install -B && cat target/site/jacoco/index.html)
