--- a/JavaWorkspace/patchGeneration/pom.xml
+++ b/JavaWorkspace/patchGeneration/pom.xml
@@ -151,6 +151,11 @@
 			<artifactId>json</artifactId>
 			<version>20180130</version>
 		</dependency>
+		<dependency>
+			<groupId>edu.iastate.sdmay1809</groupId>
+			<artifactId>shared</artifactId>
+			<version>0.1.0</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
