--- a/JavaWorkspace/rssReaderConcept/pom.xml
+++ b/JavaWorkspace/rssReaderConcept/pom.xml
@@ -138,9 +138,14 @@
 			<artifactId>json</artifactId>
 			<version>20180130</version>
 		</dependency>
+		<dependency>
+			<groupId>edu.iastate.sdmay1809</groupId>
+			<artifactId>shared</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 	</dependencies>
 	<groupId>edu.iastate.sdmay1809</groupId>
-	<version>0.1.0</version>
+	<version>0.2.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
