Completed patcher and updated tests

--- a/JavaWorkspace/patchGeneration/resources/patcherConfig.json
+++ b/JavaWorkspace/patchGeneration/resources/patcherConfig.json
@@ -74,5 +74,13 @@
 		"int",
 		"void",
 		"long"
-	]
+	],
+	
+	"MutexFilesToIncludeHeaderIn" : [
+		"include/linux/mutex.h"
+	],
+	
+	"SpinFilesToIncludeHeaderIn" : [
+		"include/linux/spinlock.h"
+	]	
 }
